@@ -6,7 +6,7 @@
 # file.  I've provided some comments here, but things may not be so
 # clear without further explanation.
 #
-# Last Modified: 11-23-2005
+# Last Modified: 10-26-2006
 #
 ##############################################################################
 
@@ -746,7 +746,7 @@ obsess_over_services=0
 # rescheduled, you might want to try enabling this option.
 # Values: 1 = enable checks, 0 = disable checks
 
-check_for_orphaned_services=0
+check_for_orphaned_services=1
 
 
 
