@@ -9,6 +9,7 @@ Nagios 2.x Change Log
 * Fix for embedded audio in tac and status CGIs
 * Fixed bug in nagiostats utility when reporting host/service check latency
 * Misc code cleanups for compiler warnings
+* Default is now to check for orphaned service checks (Francois Caen)
 
 
 
